Fixed black-covering going off-screen

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -227,7 +227,7 @@ li.nav-item.active .sidebar-image,
 #black-covering {
     width          : 100%;
     height         : 100%;
-    position       : absolute;
+    position       : fixed;
     background     : black;
     opacity        : 0;
     z-index        : 200;
